Fix for Sign in button styling on small screen sizes

--- a/css/authorizer-login.css
+++ b/css/authorizer-login.css
@@ -2,7 +2,7 @@
 	font-size: 18px;
 	height: 50px;
 	margin: 0 0 20px 0;
-	padding-top: 8px;
+	padding-top: 7px;
 	text-align: center;
 	width: 100%;
 }
@@ -11,6 +11,17 @@
 }
 .login .button-external .label {
 	padding-left: 20px;
+}
+
+@media screen and (max-width: 782px) {
+	.login .button-external {
+		padding: 0 14px;
+		line-height: 2.7143;
+		min-height: 40px;
+	}
+	.login .button-external .dashicons {
+		padding-top: 7px;
+	}
 }
 
 .login .button-google {
